<resources>
    <string name="app_name">CompMusicPlayer</string>
    <string name="app_subtitle">Select a Playlist</string>

    <!--Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="playlists_drawer">Playlists</string>
    <string name="songs_drawer">Songs</string>
    <string name="artist_drawer">Artists</string>
    <string name="album_drawer">Albums</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="login_dialog_title">Please login to continue</string>
    <string name="login_Dialog_Fragment">Login Screen</string>

    <!--Music Player-->

    <string name="content_description_play">Play Button</string>
    <string name="content_description_pause">Play Button</string>
    <string name="content_description_skip_next">Play Button</string>
    <string name="content_description_skip_previous">Play Button</string>

    <string name="two_minute_radio_button">2:00</string>
    <string name="one_thirty_radio_button">1:30</string>
    <string name="start_time">0:00</string>

    <string name="skip_previous_song">Skip to previous song</string>
    <string name="skip_next_song">Skip to next song</string>
    <string name="play_song">Play song</string>
    <string name="pause_song">Pause song</string>

    <string-array name="nav_drawer_array">
        <item>Playlists</item>
        <item>Songs</item>
        <item>Albums</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
