<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_default"
    android:orientation="horizontal"
    android:weightSum="100"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp">

    <ImageButton
        android:id="@+id/skip_previous"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/content_description_skip_previous"
        android:src="@mipmap/ic_action_playback_prev"
        />

    <ImageButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/content_description_play"
        android:src="@mipmap/ic_action_playback_play"
        />

    <ImageButton
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/content_description_pause"
        android:src="@mipmap/ic_action_playback_pause"
        android:visibility="gone"
        />

    <ImageButton
        android:id="@+id/skip_next"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/content_description_skip_next"
        android:src="@mipmap/ic_action_playback_next"
        />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:weightSum="2"
        android:checkedButton="@+id/one_minute_thirty"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/one_minute_thirty"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:buttonTint="@color/color_light_pink"
            android:checked="true"
            android:gravity="center"
            android:text="@string/one_thirty_radio_button"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/two_minutes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:buttonTint="@color/color_light_pink"
            android:text="@string/two_minute_radio_button"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"/>

    </RadioGroup>
</LinearLayout>
