<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/player_background"
    android:orientation="horizontal"
    android:weightSum="100"

    >

    <ImageButton
        android:id="@+id/skip_previous"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="33.3"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/content_description_skip_previous"
        android:src="@drawable/ic_action_playback_prev"
        />

    <ImageButton
        android:id="@+id/play"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="33.3"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/content_description_play"
        android:src="@drawable/ic_action_playback_play"

        />

    <ImageButton
        android:id="@+id/pause"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="33.3"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/content_description_pause"
        android:src="@drawable/ic_action_playback_pause"
        android:visibility="gone"

        />

    <ImageButton
        android:id="@+id/skip_next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="33.3"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/content_description_skip_next"
        android:src="@drawable/ic_action_playback_next"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="20"
        android:checkedButton="@+id/one_minute_thirty"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/one_minute_thirty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:buttonTint="@color/color_dark_pink"
            android:checked="true"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/one_thirty_radio_button"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            />

        <RadioButton
            android:id="@+id/two_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:buttonTint="@color/color_dark_pink"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/two_minute_radio_button"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            />

    </RadioGroup>


</LinearLayout>
